# learn-lh

./: .gitignore  CHANGELOG.md  README.md  cabal.project  learn-lh.cabal  package-lh.yaml  package.yaml  stack.yaml
src/: Tutorial_01_Main.hs  Tutorial_04_Polymorphism.hs
src/.liquid/: Tutorial_04_Polymorphism.hs.cst.html  Tutorial_04_Polymorphism.hs.err  Tutorial_04_Polymorphism.hs.html  Tutorial_04_Polymorphism.hs.json  Tutorial_04_Polymorphism.hs.smt2  Tutorial_04_Polymorphism.hs.vim.annot
