cabal-version:      2.4
name:               learn-lh
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Ashkan Nazary
maintainer:         ashkan.kh.nazary@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    -- exposed-modules:
    --     Tutorial_01_Main
    --     Tutorial_04_Polymorphism
    --     ReproduceFalse

    -- Modules included in this library but not exported.
    other-modules:
        Tutorial_04_Polymorphism
    other-extensions: NoImplicitPrelude ScopedTypeVariables
    build-depends:    
        base ^>=4.14.3.0,
        liquidhaskell,
        liquid-prelude,
        liquid-ghc-prim,
        liquid-containers,
        liquid-vector
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -- -Wall
        -- -Wcompat
        -- -Widentities
        -- -Wincomplete-record-updates
        -- -Wincomplete-uni-patterns
        -- -Wmissing-export-lists
        -- -Wmissing-home-modules
        -- -Wpartial-fields
        -- -Wredundant-constraints
        -- -Wno-unused-imports
        -- -Wno-unused-top-binds
        -fplugin=LiquidHaskell    
